# Working-with-GeoSpatial-Foundation-Models

./: .gitignore  Dockerfile  README.md  Thumbs.db  clean_index.sh  paths.py  pyproject.toml
GEE_script/: fetch_data.js
app/: README.md  pyproject.toml  run_dev.sh  run_prod.sh  set_up.sh  test_backend.sh
app/backend/: file_database.py  file_geodatabase.py  import_data.py  main.py  requirements.txt
app/file_database/metadata/: catalog.json  index.db
app/file_database/rasters/exposure/: exposed_population.tif  flood_coverage_rate.tif
app/file_database/rasters/flood/: flood_extent_helene_2024.tif
app/file_database/rasters/influence/: flood_distance_1000m.tif  g2sfca_influence_1000m.tif  g2sfca_influence_2500m.tif  g2sfca_influence_250m.tif  g2sfca_influence_500m.tif
app/file_database/rasters/population/: population_worldpop.tif
app/file_database/rasters/risk/: flood_distance_1000m.tif  flood_distance_2500m.tif  flood_distance_250m.tif  flood_distance_500m.tif  g2sfca_risk_1000m.tif  g2sfca_risk_2500m.tif  g2sfca_risk_250m.tif  g2sfca_risk_500m.tif
app/file_database/tables/statistics/: exposure_statistics.csv  flood_coverage_statistics.csv  g2sfca_stats_1000m.csv  g2sfca_stats_2500m.csv  g2sfca_stats_250m.csv  g2sfca_stats_500m.csv
app/file_database/vectors/boundaries/: fort_myers_boundary.gpkg  permanent_water.gpkg
app/frontend/: package-lock.json  package.json
app/frontend/public/: index.html
app/frontend/src/: App.css  App.js
data/: README.md
flood_extract/: extract_flood.py  permanent_water.py
pop_exposure/: accessibility.py  clip.py  overlay.py  run_accessibility.sh
(+8 files in other folders)
