[project]
name = "fortmyers"
version = "0.1.0"
description = "Fort Myers Hurricane Helene flood segmentation and analysis using Sentinel-2 imagery and Prithvi-EO-2.0 model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Geospatial data processing
    "geopandas>=0.14.0",
    "rasterio>=1.3.0",
    "rioxarray>=0.15.0",
    "shapely>=2.0.0",
    # Data manipulation and analysis
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "xarray>=2023.1.0",
    # Deep learning frameworks
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "einops>=0.7.0",
    # Machine learning
    "lightgbm>=4.0.0",
    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "gradio-client>=2.0.0",
    "huggingface-hub>=1.1.6",
    "matplotlib>=3.10.7",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
]
