[project]
name = "fortmyers-flood-dashboard"
version = "1.0.0"
description = "Fort Myers Flood Risk Analysis Dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "rasterio>=1.3.9",
    "geopandas>=0.14.1",
    "numpy>=1.24.3",
    "pandas>=2.1.3",
    "shapely>=2.0.2",
    "python-multipart>=0.0.6",
    "pillow>=10.1.0",
    "matplotlib>=3.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = []
